--- a/scan-filter.html
+++ b/scan-filter.html
@@ -12,10 +12,15 @@
 
 
 <form action="/api/data" method="POST"> <!--The action attribute specifies where to send the form-data when a form is submitted.-->
-  Some data: <input type="text" name="S" id="data">
+  Last name: <input type="text" name="lname" id="last-name"> First name: <input type="text" name="fname" id="first-name">
   <button type="submit">Send</button>
 </form>
 
-
+<!--
+<form action="/api/data" method="POST"> 
+  First name: <input type="text" name="fname" id="first-name">
+  <button type="submit">Send</button>
+</form>
+-->
 
 </html>
