--- a/scan-filter.html
+++ b/scan-filter.html
@@ -10,17 +10,22 @@
 
 </head>
 
+<body>
 
-<form action="/api/data" method="POST"> <!--The action attribute specifies where to send the form-data when a form is submitted.-->
-  Last name: <input type="text" name="lname" id="last-name"> First name: <input type="text" name="fname" id="first-name">
-  <button type="submit">Send</button>
-</form>
 
-<!--
-<form action="/api/data" method="POST"> 
-  First name: <input type="text" name="fname" id="first-name">
-  <button type="submit">Send</button>
-</form>
--->
+  <form action="/api/data" method="POST">
+    <!--The action attribute specifies where to send the form-data when a form is submitted.-->
+    Last name: <input type="text" name="lname" id="last-name"> First name: <input type="text" name="fname" id="first-name">
+    <button type="submit">Send</button>
+  </form>
+
+
+
+  <div id="last-name-results">
+  </div>
+
+</body>
+
+
 
 </html>
