updated scan-filter.html & scan-and-filter-table.js

--- a/scan-filter.html
+++ b/scan-filter.html
@@ -13,16 +13,35 @@
 <body>
 
 
-  <form action="/api/data" method="POST">
+  <form action="/scanResults" method="POST" id="search-form">
     <!--The action attribute specifies where to send the form-data when a form is submitted.-->
     Last name: <input type="text" name="lname" id="last-name"> First name: <input type="text" name="fname" id="first-name">
     <button type="submit">Send</button>
   </form>
 
 
-
-  <div id="last-name-results">
+  <div id="results">
+    <p>results should go here</p>
   </div>
+
+<!--
+<script>
+    function showScanResults() {
+      var ajaxTest = new XMLHttpRequest();
+      ajaxTest.onreadystatechange = function () {
+        if (ajaxTest.readyState == 4 && ajaxTest.status == 200) {
+          console.log('ajaxTest = '+ajaxTest);
+          document.getElementById("results").innerHTML = ajaxTest.responseText;
+        }
+      };
+      ajaxTest.open("GET", "/", true);
+      ajaxTest.send();
+      //ajaxTest.responseText;
+    }
+  </script>
+  
+-->
+  
 
 </body>
 
